--- a/src/main/resources/static/views/index.html
+++ b/src/main/resources/static/views/index.html
@@ -12,25 +12,20 @@
         <script src="../lib/layer/layer.js" type="text/javascript" charset="utf-8"></script>
         <script src="../js/utils.js" type="text/javascript" charset="utf-8"></script>
         <script src="../js/index.js" type="text/javascript" charset="utf-8"></script>
-
         <link rel="stylesheet" type="text/css" href="../css/header.css"/>
 
     </head>
     <body>
         <div class="nav index" style="height: 80px;">
             <div class="layui-container">
-                <div class="nav-logo"><a href="index.html"> <img src="../img/header/log.png" alt=""> </a></div>
+                <div class="nav-logo"><a href=""> <img src="../img/header/log.png" alt=""> </a></div>
                 <div class="nav-list">
                     <button><span class=""></span><span style="display: block;"></span><span class=""></span></button>
                     <ul class="layui-nav" lay-filter="">
                         <li class="layui-nav-item"><a href="/">Product</a></li>
                         <li class="layui-nav-item"><a href="#">Support</a></li>
                         <li class="layui-nav-item"><a href="#">About Us</a></li>
-                        <li class="layui-nav-item"><a href="javascript:page('account');">Account</a></li>
-                        <li class="layui-nav-item"><a href="javascript:page('cart');"><img src="../img/header/cart.png"></a>
-                        </li>
-                        <li class="layui-nav-item"><a href="javascript:page('login')"><img
-                                src="../img/header/login.png"></a></li>
+                        <li class="layui-nav-item"><a href="javascript:page('cart');"><img src="../img/header/cart.png"></a></li>
                         <span class="layui-nav-bar" style="left: 342px; top: 78px; width: 0px; opacity: 0;"></span>
                     </ul>
                 </div>
